--- a/cli/config/configuration-nemu.toml.in
+++ b/cli/config/configuration-nemu.toml.in
@@ -191,6 +191,11 @@ enable_hugepages = @DEFENABLEHUGEPAGES_NEMU@
 # Default true
 #use_vsock = true
 
+# VSock connect timeout. Only effective when "use_vsock" is true
+# Valid time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
+# If unspecified then timeout will be default define in kernel.
+#vsock_connect_timeout = "10ms"
+
 # VFIO devices are hotplugged on a bridge by default. 
 # Enable hotplugging on root bus. This may be required for devices with
 # a large PCI bar, as this is a current limitation with hotplugging on 
